Fix pipeline view's overflow issue

--- a/jupyter-extension/src/plugins/mount/mount.css
+++ b/jupyter-extension/src/plugins/mount/mount.css
@@ -354,6 +354,7 @@
   flex-direction: column;
   margin: 0.25rem 16px;
   height: 100%;
+  overflow: auto;
 }
 
 .pachyderm-mount-pipeline-back {
